fix - spacing : giant, gargantuan size

--- a/utilities/spacing.scss
+++ b/utilities/spacing.scss
@@ -8,6 +8,6 @@
   --space-big: 24px; // Close-ish friends
   --space-bigger: 32px; // Friends
   --space-biggest: 64px; // Acquaintances
-  --space-giant: 64px; // Distant acquaintances
-  --space-gargantuan: 64px; // Stranger
+  --space-giant: 72px; // Distant acquaintances
+  --space-gargantuan: 128px; // Stranger
 }
